feat: adding v4 and v5

--- a/spooky_books_author_v1.ipynb
+++ b/spooky_books_author_v1.ipynb
@@ -5,7 +5,7 @@
    "id": "55416075",
    "metadata": {},
    "source": [
-    "# Spooky Books Author Prediction\n",
+    "# Spooky Books Author Prediction - Version 1\n",
     "\n",
     "Langkah langkah yang dilakukan:\n",
     "1. Memuat data\n",
