--- a/spooky_books_author_v3.ipynb
+++ b/spooky_books_author_v3.ipynb
@@ -5,7 +5,7 @@
    "id": "761c0cbb",
    "metadata": {},
    "source": [
-    "# Spooky Books Author Prediction - Enhanced Pipeline\n",
+    "# Spooky Books Author Prediction - Version 3\n",
     "\n",
     "Notebook ini memperbaiki pipeline asli dengan:\n",
     "1. Peningkatan preprocessing TF-IDF\n",
