--- a/spooky_books_author_v5.ipynb
+++ b/spooky_books_author_v5.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Spooky Books Author Prediction - Version 6 (Resource-Efficient)\n",
+        "# Spooky Books Author Prediction - Version 5\n",
         "Pipeline ringan tanpa stacking berat:\n",
         "1. TF-IDF (unigram + bigram)\n",
         "2. Feature selection opsional\n",
